--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@tailwindcss/forms": "^0.5.0",
         "autoprefixer": "^10.4.2",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
@@ -19,6 +20,8 @@
         "tailwindcss": "^3.0.13"
     },
     "dependencies": {
-        "daisyui": "^1.23.0"
+        "alpinejs": "^3.10.2",
+        "daisyui": "^1.23.0",
+        "tw-elements": "^1.0.0-alpha11"
     }
 }
