--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,15 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "7.4",
+        "php": "^7.3|^8.0",
+        "barryvdh/laravel-debugbar": "^3.6",
         "darkaonline/l5-swagger": "^8.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "predis/predis": "^2.0",
         "reliese/laravel": "^1.1"
     },
     "require-dev": {
