--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dependencies": {
         "alpinejs": "^3.10.2",
         "daisyui": "^1.23.0",
+        "jquery": "^3.6.0",
+        "jquery.nicescroll": "^3.7.6",
         "tw-elements": "^1.0.0-alpha11"
     }
 }
