- finish most functions - prepare to the most important function

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/manifest.js": "/js/manifest.js",
     "/css/app.css": "/css/app.css",
     "/vendor/jquery/jquery.js": "/vendor/jquery/jquery.js",
-    "/vendor/jquery/jquery.niceScroll.js": "/vendor/jquery/jquery.niceScroll.js"
+    "/vendor/jquery/jquery.niceScroll.js": "/vendor/jquery/jquery.niceScroll.js",
+    "/vendor/i18n/datepicker-zh-CN.js": "/vendor/i18n/datepicker-zh-CN.js"
 }
