--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@tailwindcss/forms": "^0.5.0",
         "autoprefixer": "^10.4.2",
         "axios": "^0.21",
+        "jquery-ui": "^1.13.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.5",
