- prepare to the patinet part

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,5 @@
     "/css/app.css": "/css/app.css",
     "/vendor/jquery/jquery.js": "/vendor/jquery/jquery.js",
     "/vendor/jquery/jquery.niceScroll.js": "/vendor/jquery/jquery.niceScroll.js",
-    "/vendor/i18n/datepicker-zh-CN.js": "/vendor/i18n/datepicker-zh-CN.js"
+    "/vendor/echarts/echarts.min.js": "/vendor/echarts/echarts.min.js"
 }
