--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "alpinejs": "^3.10.2",
         "daisyui": "^1.23.0",
+        "echarts": "^5.3.3",
         "jquery": "^3.6.0",
         "jquery.nicescroll": "^3.7.6",
         "tw-elements": "^1.0.0-alpha11"
